{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Move",
            "id": "3af09143-2b09-4849-82de-2176be7111a0",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "bea8b11b-4446-42de-bda2-51b0a2903da1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "b38c1b77-24dd-4fed-aa79-371edef07208",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "313545c7-930f-4a20-b9a4-280cbb70996f",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87907597-af1c-4f6b-8b48-2e7e6702ec4e",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}